Release TinyCraft v0.2.1